# example-standalone-inferencing-alif

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Dockerfile  README.md  build.sh  build_appkit.sh  build_devkit.sh  ei-app-cfg.json  ensemble.ld  ensemble.sct
dependencies/core-software/: .gitignore  CMakeLists.txt  README.md  cmsis.cmake  event_recorder.cmake
dependencies/core-software/cmake/toolchain/: arm-none-eabi-gcc.cmake  armclang.cmake
dependencies/core-software/drivers/: CMakeLists.txt
dependencies/core-software/drivers/mailbox/include/: mailbox.hpp
dependencies/core-software/drivers/mhu_dummy/include/: mhu_dummy.hpp
dependencies/core-software/drivers/mhu_juno/include/: mhu_juno.hpp
dependencies/core-software/drivers/mhu_v2/: CMakeLists.txt
dependencies/core-software/drivers/mhu_v2/include/: mhu_v2.hpp
dependencies/core-software/drivers/mhu_v2/src/: mhu_v2.cpp
dependencies/core-software/drivers/timing_adapter/include/: timing_adapter.h
dependencies/core-software/drivers/uart/: CMakeLists.txt  uart_config.h.in
dependencies/core-software/drivers/uart/include/: uart_stdout.h
dependencies/core-software/drivers/uart/src/: uart_cmsdk_apb.c  uart_dummy.c  uart_pl011.c
dependencies/core-software/lib/: CMakeLists.txt
dependencies/core-software/lib/arm_profiler/include/: arm_profiler.hpp
dependencies/core-software/lib/arm_profiler/src/: arm_profiler.cpp
dependencies/core-software/lib/ethosu_monitor/: CMakeLists.txt  README.md
dependencies/core-software/lib/ethosu_monitor/include/: ethosu_monitor.hpp
dependencies/core-software/lib/ethosu_monitor/src/: ethosu_monitor.cpp
dependencies/core-software/lib/layer_by_layer_profiler/: CMakeLists.txt
dependencies/core-software/lib/layer_by_layer_profiler/include/: layer_by_layer_profiler.hpp
dependencies/core-software/lib/layer_by_layer_profiler/src/: layer_by_layer_profiler.cpp
dependencies/core-software/lib/rte_component/include/: RTE_Components.h
dependencies/lvgl/: lv_conf.h
scripts/cmake/: bare-metal-sources.cmake  ei_user_options.cmake
source/: ei_classifier_porting.cpp  ei_microphone.cpp  ei_microphone.h  ei_run_impulse.cpp  ei_run_impulse.h  ensemble_HP.sct  features.h  firmware-sdk  main.cpp  old_main.cpp  timing.cpp  timing.h
source/firmware-copies/: sensor_aq_mbedtls_hs256.cpp
source/firmware-sdk/: ei_at_handlers_lib.h  ei_device_info_lib.h  ei_device_memory.h  ei_microphone_lib.h  sensor_aq.h
source/firmware-sdk-alif/: ei_at_handlers_lib.cpp  ei_fusion.cpp  ei_image_lib.h  ei_image_nn.h  ei_microphone_lib.h
source/hal/: BMI323_imu_driver.c  BMI323_imu_driver.h  Driver_GPIO.c  Driver_GPIO.h  Driver_PINMUX_AND_PINPAD.c  Driver_PINMUX_AND_PINPAD.h  Driver_USART.c  GPIO_ll_drv.c  GPIO_ll_drv.h  GT911_touch_driver.c  GT911_touch_driver.h  LPTIMER_ll_drv.h  M55_HE.h  M55_HP.h  RTE_Components.h  (+22 more)
(+44 files in other folders)
